--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -2,6 +2,18 @@
 
 /* Layout */
 
+body {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto 1fr auto;
+}
+
+main {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 1fr;
+}
+
 
 /* Other Style */
 
