--- a/css/base.css
+++ b/css/base.css
@@ -29,6 +29,7 @@ main>* {
     border-style: solid;
     border-width: 5px;
     border-color: var(--dark);
+    gap: 10px;
 }
 
 footer {
@@ -46,10 +47,6 @@ body>* {
     margin: 10px;
     padding: 20px;
     border-radius: 10px;
-}
-
-main {
-    grid-gap: 10px;
 }
 
 main>* {
