--- a/css/three-columns.css
+++ b/css/three-columns.css
@@ -2,6 +2,30 @@
 
 /* Layout */
 
+body {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto 1fr auto;
+}
+
+main {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    grid-template-rows: auto 1fr;
+    gap: 10px;
+}
+
+#title {
+    grid-column: 1 / 4;
+    text-align: center;
+}
+
+#main-content>* {
+    border-style: solid;
+    border-width: 5px;
+    border-color: var(--dark);
+}
+
 
 /* Other Style */
 
