--- a/css/home.css
+++ b/css/home.css
@@ -8,6 +8,11 @@ body {
     grid-template-rows: auto 1fr auto;
 }
 
+main {
+    display: grid;
+    place-items: stretch;
+}
+
 
 /* Other Style */
 
