Add 3 Block structure

--- a/css/base.css
+++ b/css/base.css
@@ -41,6 +41,9 @@ footer {
 
 body {
     height: 100vh;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto 1fr auto;
 }
 
 body>* {
@@ -51,6 +54,10 @@ body>* {
 
 main>* {
     padding: 10px;
+}
+
+#title {
+    text-align: center;
 }
 
 
