--- a/css/base.css
+++ b/css/base.css
@@ -16,7 +16,7 @@ body {
 }
 
 header {
-    background-color: var(--accent2);
+    background-color: var(--accent1);
     color: var(--dark);
 }
 
@@ -38,6 +38,19 @@ footer {
 
 
 /* Layout */
+
+nav {
+    display: grid;
+    grid-template-columns: auto 1fr;
+}
+
+#site-title {
+    place-self: center;
+}
+
+nav ul {
+    justify-self: right;
+}
 
 body {
     height: 100vh;
@@ -61,7 +74,32 @@ main>* {
 }
 
 
-/* Other Style */
+/* Typography */
 
+h1 {
+    font-family: 'Lato', sans-serif;
+    font-size: 54px;
+    font-weight: 300;
+    line-height: 58px;
+}
 
-/* Fonts */
+article h1 {
+    margin: 0 0 58px;
+}
+
+p {
+    font-family: 'Lucida Sans', Arial, sans-serif;
+    font-size: 16px;
+    line-height: 26px;
+    text-indent: 30px;
+    margin: 0;
+}
+
+a {
+    color: var(--dark);
+    text-decoration: underline;
+}
+
+a:hover {
+    color: var(--accent2);
+}
