--- a/css/base.css
+++ b/css/base.css
@@ -25,13 +25,6 @@ main {
     color: var(--dark);
 }
 
-main>* {
-    border-style: solid;
-    border-width: 5px;
-    border-color: var(--dark);
-    gap: 10px;
-}
-
 footer {
     background-color: var(--accent1);
 }
@@ -44,6 +37,10 @@ nav {
     grid-template-columns: auto 1fr;
 }
 
+nav li {
+    padding: 5px;
+}
+
 #site-title {
     place-self: center;
 }
@@ -52,8 +49,16 @@ nav ul {
     justify-self: right;
 }
 
+main>* {
+    border-style: solid;
+    border-width: 5px;
+    border-color: var(--dark);
+    gap: 10px;
+    padding: 10px;
+}
+
 body {
-    height: 100vh;
+    min-height: 100vh;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: auto 1fr auto;
@@ -65,10 +70,6 @@ body>* {
     border-radius: 10px;
 }
 
-main>* {
-    padding: 10px;
-}
-
 #title {
     text-align: center;
 }
@@ -76,11 +77,18 @@ main>* {
 
 /* Typography */
 
-h1 {
+body {
     font-family: 'Lato', sans-serif;
-    font-size: 54px;
+}
+
+h1 {
+    font-size: 3rem;
     font-weight: 300;
     line-height: 58px;
+}
+
+h2 {
+    font-weight: 400;
 }
 
 article h1 {
@@ -90,7 +98,7 @@ article h1 {
 p {
     font-family: 'Lucida Sans', Arial, sans-serif;
     font-size: 16px;
-    line-height: 26px;
+    line-height: 1.8;
     text-indent: 30px;
     margin: 0;
 }
@@ -102,4 +110,13 @@ a {
 
 a:hover {
     color: var(--accent2);
+}
+
+#site-title {
+    font-family: 'Lato', sans-serif;
+    font-size: 12px;
+    font-weight: bold;
+    line-height: 12px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
 }
