--- a/css/three-blocks.css
+++ b/css/three-blocks.css
@@ -5,7 +5,7 @@
 main {
     display: grid;
     grid-template-columns: auto auto;
-    grid-template-rows: auto 1fr 1fr;
+    grid-template-rows: auto auto 1fr;
     gap: 10px;
 }
 
@@ -18,9 +18,3 @@ main {
     grid-column: 1 / 4;
     grid-row: 2;
 }
-
-
-/* Other Style */
-
-
-/* Fonts */
